# langchain-utcp-adapters

./: .gitignore  .pdm-python  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: README.md  authentication.py  authentication_example.py  basic_usage.py  bedrock_advanced.py  bedrock_integration.py  bedrock_simple.py  bedrock_test.py  direct_usage.py  langgraph_integration.py  openai_advanced.py  openai_langgraph.py  openapi_integration.py  providers.py  real_providers_example.py  simple_direct_usage.py  simple_openai_langgraph.py
langchain_utcp_adapters/: __init__.py  bedrock_utils.py  client.py  tools.py
tests/: test_client.py  test_providers.json  test_real_providers.py  test_tools.py
